# obscell-wallet

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
config/: devnet.toml  mainnet.toml  testnet.toml
data/wallet.mdb/: data.mdb  lock.mdb
docs/: INTRODUCTION.md
docs/plans/: 2026-02-05-ct-token-implementation.md  2026-02-05-integration-test-design.md  2026-02-05-tui-wallet-design.md  2026-02-12-block-polling-scanner.md
src/: action.rs  app.rs  cli.rs  config.rs  errors.rs  lib.rs  logging.rs  main.rs  tui.rs
src/components/: accounts.rs  dev.rs  history.rs  mod.rs  receive.rs  send.rs  settings.rs  tokens.rs  wallet_setup.rs
src/domain/: account.rs  block_changes.rs  cell.rs  crypto.rs  ct.rs  ct_info.rs  ct_mint.rs  ct_tx_builder.rs  mod.rs  scan_state.rs  stealth.rs  tx_builder.rs  wallet.rs
src/infra/: block_scanner.rs  devnet.rs  faucet.rs  mod.rs  rpc.rs  scanner.rs  store.rs
tests/: README.md
tests/fixtures/: ct-info-type  ct-token-type  setup.sh  stealth-lock
tests/fixtures/devnet/: ckb.toml  miner.key
tests/fixtures/devnet/specs/: dev.toml
tests/integration/: contract_deployer.rs  devnet.rs  e2e_basic_flow.rs  e2e_ct_flow.rs  e2e_ct_genesis_mint.rs  e2e_faucet_history.rs  e2e_faucet_send_flow.rs  e2e_history.rs  e2e_incremental_scan.rs  e2e_user_flow.rs  faucet.rs  mod.rs
